// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders empty closed 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid #ccc;
  display: inline-block;
  margin: 0 0.694rem 0 0.402rem;
  padding: 0;
}

.c1 {
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
}

.c2 {
  margin: 0 0 0 0.694rem;
  color: #ccc;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 0.2rem;
}

.c0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 2rem;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Select an item
      </span>
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`Select renders empty opened 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0.694rem 0 0.402rem;
  padding: 0;
}

.c1 {
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
}

.c2 {
  margin: 0 0 0 0.694rem;
  color: #ccc;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 0.2rem;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.06),0 1px 2px rgba(0,0,0,0.12);
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
  border-top: none !important;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: auto;
  max-height: auto;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c5 {
  color: #ccc;
  text-align: center;
}

.c0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 2rem;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Select an item
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
      >
        No items
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders empty with custom placeholders 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0.694rem 0 0.402rem;
  padding: 0;
}

.c1 {
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
}

.c2 {
  margin: 0 0 0 0.694rem;
  color: #ccc;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 0.2rem;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.06),0 1px 2px rgba(0,0,0,0.12);
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
  border-top: none !important;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: auto;
  max-height: auto;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c5 {
  color: #ccc;
  text-align: center;
}

.c0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 2rem;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Custom placeholder
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
      >
        Custom empty placeholder
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders selected items count in select box 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid #ccc;
  display: inline-block;
  margin: 0 0.694rem 0 0.402rem;
  padding: 0;
}

.c1 {
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
}

.c2 {
  margin: 0 0 0 0.694rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 0.2rem;
}

.c0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 2rem;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
}

<div>
  <div
    className="c0"
    display="selected-count"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Item 2
      </span>
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`Select renders selected items in select box 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid #ccc;
  display: inline-block;
  margin: 0 0.694rem 0 0.402rem;
  padding: 0;
}

.c1 {
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
}

.c2 {
  margin: 0 0 0 0.694rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 0.2rem;
}

.c0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 2rem;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
}

<div>
  <div
    className="c0"
    display="selected-items"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Item 2
      </span>
      <div
        className="c3"
      />
    </div>
  </div>
</div>
`;

exports[`Select renders with fixed height 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0.694rem 0 0.402rem;
  padding: 0;
}

.c1 {
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
}

.c2 {
  margin: 0 0 0 0.694rem;
  color: #ccc;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 0.2rem;
}

.c5 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5:hover {
  background-color: #f7f7f7;
}

.c6 {
  margin: 0 0 0 0.694rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.06),0 1px 2px rgba(0,0,0,0.12);
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
  border-top: none !important;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: 400px;
  max-height: 400px;
  overflow: hidden;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 2rem;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Select an item
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 1
        </span>
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 2
        </span>
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 3
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders with fixed width 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0.694rem 0 0.402rem;
  padding: 0;
}

.c1 {
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
}

.c2 {
  margin: 0 0 0 0.694rem;
  color: #ccc;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 0.2rem;
}

.c5 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5:hover {
  background-color: #f7f7f7;
}

.c6 {
  margin: 0 0 0 0.694rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.06),0 1px 2px rgba(0,0,0,0.12);
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
  border-top: none !important;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 400px;
  min-width: 100%;
  max-width: 400px;
  height: auto;
  max-height: auto;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 2rem;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 400px;
  max-width: 400px;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Select an item
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 1
        </span>
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 2
        </span>
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 3
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders with margin 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0.694rem 0 0.402rem;
  padding: 0;
}

.c1 {
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
}

.c2 {
  margin: 0 0 0 0.694rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 0.2rem;
}

.c5 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5:hover {
  background-color: #f7f7f7;
}

.c7 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f7f7f7;
}

.c7:hover {
  background-color: #f7f7f7;
}

.c6 {
  margin: 0 0 0 0.694rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.06),0 1px 2px rgba(0,0,0,0.12);
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
  border-top: none !important;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: auto;
  max-height: auto;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  margin: xl;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 2rem;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Item 2
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 1
        </span>
      </div>
      <div
        className="c7"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 2
        </span>
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 3
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders with no items selected 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0.694rem 0 0.402rem;
  padding: 0;
}

.c1 {
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
}

.c2 {
  margin: 0 0 0 0.694rem;
  color: #ccc;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 0.2rem;
}

.c5 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5:hover {
  background-color: #f7f7f7;
}

.c6 {
  margin: 0 0 0 0.694rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.06),0 1px 2px rgba(0,0,0,0.12);
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
  border-top: none !important;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: auto;
  max-height: auto;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 2rem;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Select an item
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 1
        </span>
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 2
        </span>
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 3
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders with responsive margin 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0.694rem 0 0.402rem;
  padding: 0;
}

.c1 {
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
}

.c2 {
  margin: 0 0 0 0.694rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 0.2rem;
}

.c5 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5:hover {
  background-color: #f7f7f7;
}

.c7 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f7f7f7;
}

.c7:hover {
  background-color: #f7f7f7;
}

.c6 {
  margin: 0 0 0 0.694rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.06),0 1px 2px rgba(0,0,0,0.12);
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
  border-top: none !important;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: auto;
  max-height: auto;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  margin: xs;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 2rem;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
}

@media only screen and (min-width:48rem) {
  .c0 {
    margin: sm;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    margin: md;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    margin: lg;
  }
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Item 2
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 1
        </span>
      </div>
      <div
        className="c7"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 2
        </span>
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 3
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders with some items selected 1`] = `
.c3 {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 4px solid #ccc;
  display: inline-block;
  margin: 0 0.694rem 0 0.402rem;
  padding: 0;
}

.c1 {
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: default;
}

.c2 {
  margin: 0 0 0 0.694rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 0.2rem;
}

.c5 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5:hover {
  background-color: #f7f7f7;
}

.c7 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f7f7f7;
}

.c7:hover {
  background-color: #f7f7f7;
}

.c6 {
  margin: 0 0 0 0.694rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  box-shadow: 0 1px 3px rgba(0,0,0,0.06),0 1px 2px rgba(0,0,0,0.12);
  border: 1px solid #d8d8d8;
  background-color: #ffffff;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
  border-top: none !important;
  box-sizing: border-box;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1;
  width: 100%;
  min-width: 100%;
  max-width: 100%;
  height: auto;
  max-height: auto;
  overflow: hidden;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.c0 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  line-height: 2rem;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: 100%;
  max-width: 100%;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <span
        className="c2"
      >
        Item 2
      </span>
      <div
        className="c3"
      />
    </div>
    <div
      className="c4"
      onClick={[Function]}
    >
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 1
        </span>
      </div>
      <div
        className="c7"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 2
        </span>
      </div>
      <div
        className="c5"
        onClick={[Function]}
      >
        <span
          className="c6"
        >
          Item 3
        </span>
      </div>
    </div>
  </div>
</div>
`;
